--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,6 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation "com.intuit.karate:karate-apache:${karateApacheVersion}"
 	testImplementation "com.intuit.karate:karate-junit5:${karateJunitVersion}"
 }
@@ -27,7 +25,7 @@ dependencies {
 sourceSets {
 	test {
 		resources {
-			srcDir file('file/test/java')
+			srcDir file('src/test/java')
 			exclude '**/*.java'
 		}
 	}
