--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,5 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.0.4'
-	id 'io.spring.dependency-management' version '1.1.0'
 }
 
 ext {
@@ -20,6 +18,7 @@ repositories {
 dependencies {
 	testImplementation "com.intuit.karate:karate-apache:${karateApacheVersion}"
 	testImplementation "com.intuit.karate:karate-junit5:${karateJunitVersion}"
+	testImplementation 'org.hamcrest:hamcrest:2.2'
 }
 
 sourceSets {
